[package]
name = "pro_cache_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-ws = "0.2"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
uuid = { version = "1.4", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
form_urlencoded = "1.2"
tokio-stream = { version = "0.1", features = ["sync"] }
actix-cors = "0.6"
parking_lot = "0.12.5"
